# project-template

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.dvc/: config
data/: README.md
dvc/: README.md
notebooks/: README.md
scripts/: README.md
tests/: README.md
tests/unit/: test_fake.py
